SCORM SCO-72, data model update, code refactor, FinBugs fixes and cleanup